fix headline text align for landing page

--- a/assets/src/style/global.scss
+++ b/assets/src/style/global.scss
@@ -1251,7 +1251,6 @@ canvas.ddpanorama:active {
         fill: #001730;
     }
     .slab-headline {
-        text-align: justify;
         margin-bottom: 1rem;
     }
     .field-group {
